# opengl-spinning-cube

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/include/: cube_renderer.h
